--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "repository": {
         "type": "git",
         "url": "https://github.com/Muragami/vscode-howl"
-    },
+  },
+  "license": "See the license in LICENSE.md",
+  "bugs": {
+        "url": "https://github.com/Muragami/vscode-howl/issues"
+  },
   "categories": [
     "Programming Languages"
   ],
